# StandupMathsChristmastreeWeb

./: .gitignore  README.md  fakeledcontrol.py  index.html  ledcontrol.py  main.py  pyproject.toml  server.py
new_fake_leds/: Cargo.toml
new_fake_leds/src/: effects.rs  gui.rs  main.rs  state.rs  web.rs
server/: server.py
static/: script.js  style.css
static/script/: capture_unidirectional.js  effects.js  main.js  merge_directions.js  ui.js
templates/: index.html
www/: script.js
