[package]
name = "led_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"

axum = { version = "0.7"}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

parking_lot = "0.12"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
